--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Mirle.ASRS.Close.Program">
       <HintPath>..\Dll\Mirle.ASRS.Close.Program.exe</HintPath>
     </Reference>
+    <Reference Include="Mirle.WriLog">
+      <HintPath>..\Dll\Mirle.WriLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -122,10 +125,6 @@
     <ProjectReference Include="..\Mirle.Grid.U2NMMA30\Mirle.Grid.U2NMMA30.csproj">
       <Project>{39a4c47b-c53b-4057-9dc5-93b8907639e8}</Project>
       <Name>Mirle.Grid.U2NMMA30</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mirle.Log\Mirle.WriLog.csproj">
-      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
-      <Name>Mirle.WriLog</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
