--- a/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.U2NMMA30.csproj
+++ b/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.U2NMMA30.csproj
@@ -33,6 +33,9 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mirle.WriLog">
+      <HintPath>..\Dll\Mirle.WriLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -148,10 +151,6 @@
     <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mirle.Log\Mirle.WriLog.csproj">
-      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
-      <Name>Mirle.WriLog</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
