--- a/Mirle.DB.Object/Mirle.DB.Object.csproj
+++ b/Mirle.DB.Object/Mirle.DB.Object.csproj
@@ -65,6 +65,14 @@
       <Project>{60c72719-d780-4bc8-9198-fc21c9754918}</Project>
       <Name>Mirle.DB.Proc</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.DB.WMS.Fun\Mirle.DB.WMS.Fun.csproj">
+      <Project>{ad4818ff-fefa-48f2-a7fe-f1007d3cfbbc}</Project>
+      <Name>Mirle.DB.WMS.Fun</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.DB.WMS.Proc\Mirle.DB.WMS.Proc.csproj">
+      <Project>{553bd8cf-f4c1-4b39-97ab-42cc2f7c8187}</Project>
+      <Name>Mirle.DB.WMS.Proc</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def</Name>
