--- a/Mirle.ASRS.DBCommand/Mirle.ASRS.DBCommand.csproj
+++ b/Mirle.ASRS.DBCommand/Mirle.ASRS.DBCommand.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{906DA4EE-6B8D-40C7-BD49-A410FEB1D2C8}</ProjectGuid>
+    <ProjectGuid>{9441796E-D9F9-45CC-B0C8-C8B5EEB679EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mirle.Def</RootNamespace>
-    <AssemblyName>Mirle.Def</AssemblyName>
+    <RootNamespace>Mirle.ASRS.DBCommand</RootNamespace>
+    <AssemblyName>Mirle.ASRS.DBCommand</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,12 +29,16 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mirle.Stocker.Command">
+      <HintPath>..\Dll\Mirle.Stocker.Command.dll</HintPath>
+    </Reference>
+    <Reference Include="Mirle.WriLog">
+      <HintPath>..\Dll\Mirle.WriLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reflection.Context" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,22 +47,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OEEParamConfig.cs" />
-    <Compile Include="clsConstValue.cs" />
-    <Compile Include="clsDbConfig.cs" />
-    <Compile Include="clsEnum.cs" />
-    <Compile Include="clsPlcConfig.cs" />
-    <Compile Include="clsTool.cs" />
-    <Compile Include="Element_Port.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="LocationTypes.cs" />
+    <Compile Include="ASRSProcess.cs" />
+    <Compile Include="clsWriLog.cs" />
+    <Compile Include="CraneProcess.cs" />
+    <Compile Include="DoubleDeep\SingleCrane\SingleFork\Process.cs" />
+    <Compile Include="ForkProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebApiConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Mirle">
-      <Version>1.3.2</Version>
-    </PackageReference>
+    <ProjectReference Include="..\Mirle.DB.Object\Mirle.DB.Object.csproj">
+      <Project>{25DDA85B-35BE-429D-81B4-025731C0E826}</Project>
+      <Name>Mirle.DB.Object</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
+      <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
+      <Name>Mirle.Def</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
