--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -38,9 +38,6 @@
     <Reference Include="Mirle.ASRS.Close.Program">
       <HintPath>..\Dll\Mirle.ASRS.Close.Program.exe</HintPath>
     </Reference>
-    <Reference Include="Mirle.WriLog">
-      <HintPath>..\Dll\Mirle.WriLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -137,6 +134,10 @@
     <ProjectReference Include="..\Mirle.WebAPI.U2NMMA30\Mirle.WebAPI.U2NMMA30.csproj">
       <Project>{646741d4-de4c-48ef-9b90-1785bd22cefd}</Project>
       <Name>Mirle.WebAPI.U2NMMA30</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
+      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
+      <Name>Mirle.WriLog</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
