--- a/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
+++ b/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
@@ -36,9 +36,6 @@
     <Reference Include="Mirle, Version=1.3.9.2205, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Mirle.1.3.9\lib\net472\Mirle.dll</HintPath>
     </Reference>
-    <Reference Include="Mirle.WriLog">
-      <HintPath>..\Dll\Mirle.WriLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -65,6 +62,10 @@
     <ProjectReference Include="..\Mirle.DB.Proc\Mirle.DB.Proc.csproj">
       <Project>{60c72719-d780-4bc8-9198-fc21c9754918}</Project>
       <Name>Mirle.DB.Proc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
+      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
+      <Name>Mirle.WriLog</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
