--- a/Mirle.DB.Object/Mirle.DB.Object.csproj
+++ b/Mirle.DB.Object/Mirle.DB.Object.csproj
@@ -33,9 +33,6 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mirle.WriLog">
-      <HintPath>..\DLL\Mirle.WriLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -80,6 +77,10 @@
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
       <Name>Mirle.Structure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
+      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
+      <Name>Mirle.WriLog</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
