--- a/Mirle.MapController/Mirle.MapController.csproj
+++ b/Mirle.MapController/Mirle.MapController.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsWriLog.cs" />
     <Compile Include="MapHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
