--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -123,6 +123,10 @@
       <Project>{39a4c47b-c53b-4057-9dc5-93b8907639e8}</Project>
       <Name>Mirle.Grid.U2NMMA30</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.MapController\Mirle.MapController.csproj">
+      <Project>{e9c71b96-e8f4-4124-9f18-444e8a05cf80}</Project>
+      <Name>Mirle.MapController</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
       <Name>Mirle.Structure</Name>
