feat: Map建完後，自動更新CV Location資料

--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsGetCVLocation.cs" />
     <Compile Include="Event\LoadPortEventArgs.cs" />
     <Compile Include="Library\clInitSys.cs" />
     <Compile Include="Library\clsWriLog.cs" />
