--- a/Mirle.ASRS.DBCommand/Mirle.ASRS.DBCommand.csproj
+++ b/Mirle.ASRS.DBCommand/Mirle.ASRS.DBCommand.csproj
@@ -61,6 +61,10 @@
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
+      <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
+      <Name>Mirle.Structure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
       <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
       <Name>Mirle.WriLog</Name>
