--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -124,9 +124,9 @@
       <Project>{39a4c47b-c53b-4057-9dc5-93b8907639e8}</Project>
       <Name>Mirle.Grid.U2NMMA30</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.MapController\Mirle.MapController.csproj">
+    <ProjectReference Include="..\Mirle.MapController\Mirle.MapController_2.csproj">
       <Project>{e9c71b96-e8f4-4124-9f18-444e8a05cf80}</Project>
-      <Name>Mirle.MapController</Name>
+      <Name>Mirle.MapController_2</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
@@ -140,9 +140,9 @@
       <Project>{646741d4-de4c-48ef-9b90-1785bd22cefd}</Project>
       <Name>Mirle.WebAPI.U2NMMA30</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog_2.csproj">
       <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
-      <Name>Mirle.WriLog</Name>
+      <Name>Mirle.WriLog_2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
