--- a/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
+++ b/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
@@ -63,9 +63,9 @@
       <Project>{60c72719-d780-4bc8-9198-fc21c9754918}</Project>
       <Name>Mirle.DB.Proc</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog.csproj">
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog_2.csproj">
       <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
-      <Name>Mirle.WriLog</Name>
+      <Name>Mirle.WriLog_2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
