--- a/Mirle.WriLog/Mirle.WriLog_2.csproj
+++ b/Mirle.WriLog/Mirle.WriLog_2.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FCB3BFDE-2247-4AA4-A652-F87C081B63FC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mirle.WriLog</RootNamespace>
-    <AssemblyName>Mirle.WriLog</AssemblyName>
+    <RootNamespace>Mirle.WriLog_2</RootNamespace>
+    <AssemblyName>Mirle.WriLog_2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
