--- a/Mirle.DB.WMS.Proc/Mirle.DB.WMS.Proc.csproj
+++ b/Mirle.DB.WMS.Proc/Mirle.DB.WMS.Proc.csproj
@@ -54,9 +54,9 @@
       <Project>{ad4818ff-fefa-48f2-a7fe-f1007d3cfbbc}</Project>
       <Name>Mirle.DB.WMS.Fun</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
+    <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
-      <Name>Mirle.Def</Name>
+      <Name>Mirle.Def_2</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog_2.csproj">
       <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
