--- a/Mirle.Structure/Mirle.Structure.csproj
+++ b/Mirle.Structure/Mirle.Structure.csproj
@@ -89,9 +89,9 @@
     <Compile Include="ZoneData2.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
+    <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
-      <Name>Mirle.Def</Name>
+      <Name>Mirle.Def_2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
