--- a/Mirle.DB.Proc/Mirle.DB.Proc.csproj
+++ b/Mirle.DB.Proc/Mirle.DB.Proc.csproj
@@ -65,9 +65,9 @@
       <Project>{c40166b0-0f5d-4535-94a7-699764a59a83}</Project>
       <Name>Mirle.DB.Fun</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
+    <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
-      <Name>Mirle.Def</Name>
+      <Name>Mirle.Def_2</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.Gird\Mirle.Gird.csproj">
       <Project>{8ab5fac9-7cc2-4eec-b583-39778e66ce1f}</Project>
