--- a/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.U2NMMA30.csproj
+++ b/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.U2NMMA30.csproj
@@ -87,9 +87,9 @@
       <Project>{e6f732fe-3905-49a7-b2cf-b4fa79c2dc5d}</Project>
       <Name>Mirle.Def.U2NMMA30</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mirle.Def\Mirle.Def.csproj">
+    <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
-      <Name>Mirle.Def</Name>
+      <Name>Mirle.Def_2</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
