--- a/Mirle.DB.Proc/Mirle.DB.Proc.csproj
+++ b/Mirle.DB.Proc/Mirle.DB.Proc.csproj
@@ -81,6 +81,10 @@
       <Project>{E9C71B96-E8F4-4124-9F18-444E8A05CF80}</Project>
       <Name>Mirle.MapController_2</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.Middle\Mirle.Middle.csproj">
+      <Project>{312ed336-0211-4e88-9f3f-6b15a133f864}</Project>
+      <Name>Mirle.Middle</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{0a0d222e-0c76-4838-a8b1-6ca6f26cb225}</Project>
       <Name>Mirle.Structure</Name>
