--- a/Mirle.EccsSignal_2/Mirle.EccsSignal.csproj
+++ b/Mirle.EccsSignal_2/Mirle.EccsSignal.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8FE496D0-5503-4719-9C50-6C894E125B6F}</ProjectGuid>
+    <ProjectGuid>{F1280DF7-4DAC-4BE5-8ECD-C7663697229D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mirle.Stocker.Command</RootNamespace>
-    <AssemblyName>Mirle.Stocker.Command</AssemblyName>
+    <RootNamespace>Mirle.EccsSignal_2</RootNamespace>
+    <AssemblyName>Mirle.EccsSignal_2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -53,16 +53,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICrane.cs" />
-    <Compile Include="IFork.cs" />
-    <Compile Include="IProcess.cs" />
-    <Compile Include="IStocker.cs" />
+    <Compile Include="clsWriLog.cs" />
+    <Compile Include="DB_Proc\clsGetDB.cs" />
+    <Compile Include="DB_Proc\clsHost.cs" />
+    <Compile Include="DB_Proc\clsProc.cs" />
+    <Compile Include="ECCS_Structure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def_2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.WriLog\Mirle.WriLog_2.csproj">
+      <Project>{fcb3bfde-2247-4aa4-a652-f87c081b63fc}</Project>
+      <Name>Mirle.WriLog_2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
