--- a/Mirle.DB.Fun/Mirle.DB.Fun.csproj
+++ b/Mirle.DB.Fun/Mirle.DB.Fun.csproj
@@ -62,6 +62,7 @@
     <Compile Include="clsUnitModeDef.cs" />
     <Compile Include="clsUnitStsLog.cs" />
     <Compile Include="clsWriLog.cs" />
+    <Compile Include="Events\NeedShelfToShelfArgs.cs" />
     <Compile Include="Parameter\clsAlarmData.cs" />
     <Compile Include="Parameter\clsCmd_Dtl.cs" />
     <Compile Include="Parameter\clsCmd_Dtl_His.cs" />
@@ -85,6 +86,10 @@
     <Compile Include="clsPortDef.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Mirle.DB.WMS.Proc\Mirle.DB.WMS.Proc.csproj">
+      <Project>{553bd8cf-f4c1-4b39-97ab-42cc2f7c8187}</Project>
+      <Name>Mirle.DB.WMS.Proc</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def_2</Name>
@@ -96,6 +101,10 @@
     <ProjectReference Include="..\Mirle.MapController\Mirle.MapController_2.csproj">
       <Project>{E9C71B96-E8F4-4124-9F18-444E8A05CF80}</Project>
       <Name>Mirle.MapController_2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mirle.Middle\Mirle.Middle.csproj">
+      <Project>{312ED336-0211-4E88-9F3F-6B15A133F864}</Project>
+      <Name>Mirle.Middle</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mirle.Structure\Mirle.Structure.csproj">
       <Project>{cc7b0aac-3935-44cf-b363-55c0445358d0}</Project>
@@ -114,5 +123,6 @@
       <Version>2.0.10</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
