feat: 整理WMS Table欄位參數化

--- a/Mirle.DB.WMS.Fun/Mirle.DB.WMS.Fun.csproj
+++ b/Mirle.DB.WMS.Fun/Mirle.DB.WMS.Fun.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="clsLocMst.cs" />
     <Compile Include="clsWriLog.cs" />
+    <Compile Include="Parameter\clsLocMst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
