--- a/Mirle.Middle/Mirle.Middle.csproj
+++ b/Mirle.Middle/Mirle.Middle.csproj
@@ -56,6 +56,8 @@
     <Compile Include="clsWriLog.cs" />
     <Compile Include="DB_Proc\clsGetDB.cs" />
     <Compile Include="DB_Proc\clsHost.cs" />
+    <Compile Include="DB_Proc\clsMiddleCmd.cs" />
+    <Compile Include="DB_Proc\clsTool.cs" />
     <Compile Include="DB_Proc\Parameter\clsMiddleCmd.cs" />
     <Compile Include="MidHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
