--- a/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.U2NMMA30.csproj
+++ b/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.U2NMMA30.csproj
@@ -50,6 +50,7 @@
     <Compile Include="clsTool.cs" />
     <Compile Include="clsWriLog.cs" />
     <Compile Include="Function\AutoPickup.cs" />
+    <Compile Include="Function\CV_RECEIVE_NEW_BIN_CMD.cs" />
     <Compile Include="Function\EmptyShelfQuery.cs" />
     <Compile Include="Function\EQPStatusUpdate.cs" />
     <Compile Include="Function\PickupQuery.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Function\WcsCancel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportInfo\AutoPickupInfo.cs" />
+    <Compile Include="ReportInfo\CV_RECEIVE_NEW_BIN_CMD_Info.cs" />
     <Compile Include="ReportInfo\EmptyShelfQuery_WMS.cs" />
     <Compile Include="ReportInfo\EmptyShelfQuery_WCS.cs" />
     <Compile Include="ReportInfo\EQPStatusUpdateInfo.cs" />
