feat: 更新BufferStatusQuery；CVReceiveNewBinCmd添加ioType欄位

--- a/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
+++ b/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
@@ -49,6 +49,7 @@
     <Compile Include="clsHost.cs" />
     <Compile Include="clsTool.cs" />
     <Compile Include="clsWriLog.cs" />
+    <Compile Include="FunctionForController\BufferStatusQuery.cs" />
     <Compile Include="FunctionForController\TransferCommandRequest.cs" />
     <Compile Include="FunctionForController\TaskCancel.cs" />
     <Compile Include="FunctionForController\RollTask.cs" />
