--- a/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
+++ b/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
@@ -46,8 +46,17 @@
   <ItemGroup>
     <Compile Include="ApiEventController.cs" />
     <Compile Include="clsWriLog.cs" />
-    <Compile Include="Models\BaseInfo.cs" />
-    <Compile Include="Models\CarrierTransferCancelInfo.cs" />
+    <Compile Include="ModelsForWES\LotList.cs" />
+    <Compile Include="ModelsForWES\LotTransferCancelInfo.cs" />
+    <Compile Include="ModelsForWES\LotShelfTransferInfo.cs" />
+    <Compile Include="ModelsForWES\LotRetrieveTransferInfo.cs" />
+    <Compile Include="ModelsForWES\LotPutawayTransferInfo.cs" />
+    <Compile Include="ModelsForWES\CarrierShelfTransferInfo.cs" />
+    <Compile Include="ModelsForWES\CarrierRetrieveTransferInfo.cs" />
+    <Compile Include="ModelsForWES\CarrierPutawayTransferInfo.cs" />
+    <Compile Include="ModelsForWES\CarrierTransferCancelInfo.cs" />
+    <Compile Include="ModelsForWES\CarrierTransferInfo.cs" />
+    <Compile Include="ModelsForWES\BaseInfo.cs" />
     <Compile Include="Models\CraneStsInfo.cs" />
     <Compile Include="Models\CvStsInfo.cs" />
     <Compile Include="Models\DowntimeStsInfo.cs" />
@@ -68,7 +77,9 @@
     <Compile Include="Models\EqpOEEQueryInfo.cs" />
     <Compile Include="Models\UtilizationStsInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reply\ReplyCode.cs" />
+    <Compile Include="ReplyForWES\LotReply.cs" />
+    <Compile Include="ReplyForWES\CarrierReply.cs" />
+    <Compile Include="ReplyForWES\ReplyCode.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UnityResolver.cs" />
     <Compile Include="WebApiHost.cs" />
